<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting.SettingQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/profile_ivUserBackground"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_ivuserbackgroundimage">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="150dp"
                    android:layout_marginLeft="20dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivUser"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/default_profile_image"
                        app:civ_border_color="@color/colorPrimary"
                        app:civ_border_width="1.2dp"
                        app:civ_border_overlay="true" />
                    <ImageView
                        android:padding="5dp"
                        android:id="@+id/editPhotoIcon"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginLeft="-20dp"
                        android:src="@drawable/ic_edit_circle"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="11dp"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/userName"
                            android:textSize="25sp"
                            android:textColor="@color/white"
                            android:gravity="left"
                            android:textStyle="bold"
                            android:layout_marginBottom="13dp"
                            android:text="hi"/>

                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:id="@+id/location_text"
                    android:textStyle="bold"
                    android:textSize="20sp"></TextView>
                <Spinner
                    android:id="@+id/spinner_city"
                    android:layout_width="115dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:entries="@array/city">
                </Spinner>
            </LinearLayout>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/set_profile_status"
                android:inputType="textMultiLine"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:textColorHint="@color/colorPrimaryLight"
                android:hint="@string/default_status"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/language"
            android:textColorHint="@color/colorPrimaryLight"
            android:text="@string/languagechoice"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="19sp"
            android:layout_marginBottom="8dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/language_radio">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/English"
                    android:textSize="14sp"
                    android:id="@+id/language_english">

                </RadioButton>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Korean"
                    android:textSize="14sp"
                    android:id="@+id/language_korean">

                </RadioButton>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Chinese"
                    android:textSize="14sp"
                    android:id="@+id/language_Chinese">

                </RadioButton>
            </RadioGroup>
        </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/interest"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:text="@string/interestchoice"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginTop="15dp"
                    android:textSize="19sp"
                    android:layout_marginBottom="10dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    >
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant"
                        android:textSize="15sp"
                        android:id="@+id/restaurant"></CheckBox>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/culture"
                        android:textSize="15sp"
                        android:id="@+id/culture"></CheckBox>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show"
                        android:textSize="15sp"
                        android:id="@+id/show"></CheckBox>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center">
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/art"
                        android:textSize="15sp"
                        android:id="@+id/art"></CheckBox>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shopping"
                        android:textSize="15sp"
                        android:id="@+id/shopping"></CheckBox>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sights"
                        android:textSize="15sp"
                        android:id="@+id/sights"></CheckBox>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/walk"
                        android:textSize="15sp"
                        android:id="@+id/walk"></CheckBox>
                </LinearLayout>


                <Button
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/update_settings_button"
                    android:layout_marginTop="28sp"
                    android:inputType="textMultiLine"
                    android:text="Update"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="@drawable/buttons"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:layout_marginBottom="10dp"/>

    </LinearLayout>

</ScrollView>